syntax = "proto3";
// 部分struct{}数据结构待完善!!!

// node0(Server) <-> orderer(Client)
service Bridge{
    // 由发送方调用函数，接收方实现函数
    rpc TransMsg(Msg) returns (Status){};
    rpc TransBlock(Block) returns (Status){};
    // dht调用，orderer实现
    rpc LoadConfig(Status) returns (Config){};
}

message Status{

}

message Config{

    
}

message Envelope{
// A marshaled Payload
     bytes Payload=1; //`protobuf:"bytes,1,opt,name=payload,proto3" json:"payload,omitempty"`
    // A signature by the creator specified in the Payload header
     bytes Signature=2; //`protobuf:"bytes,2,opt,name=signature,proto3" json:"signature,omitempty"`
//      message XXX_NoUnkeyedLiteral{}; //`json:"-"`
      bytes XXX_unrecognized=4;      //`json:"-"`
      sfixed32 XXX_sizecache=5; //`json:"-"`
}

message Msg{
     uint64 configSeq=1;
	  Envelope normalMsg=2;
	  Envelope configMsg=3;
}

message BlockHeader{
    uint64 Number=1;               //uint64   `protobuf:"varint,1,opt,name=number,proto3" json:"number,omitempty"`
	bytes PreviousHash=2;         //[]byte   `protobuf:"bytes,2,opt,name=previous_hash,json=previousHash,proto3" json:"previous_hash,omitempty"`
	bytes DataHash=3;             //[]byte   `protobuf:"bytes,3,opt,name=data_hash,json=dataHash,proto3" json:"data_hash,omitempty"`
//	message XXX_NoUnkeyedLiteral{}; //struct{} `json:"-"`
	bytes XXX_unrecognized=4;     //[]byte   `json:"-"`
	sfixed32 XXX_sizecache=5;        //int32    `json:"-"`
}

message BlockData{
    repeated bytes Data=1;                 //[][]byte `protobuf:"bytes,1,rep,name=data,proto3" json:"data,omitempty"`
//	message XXX_NoUnkeyedLiteral{}; //struct{} `json:"-"`
	bytes XXX_unrecognized=2;     //[]byte   `json:"-"`
	sfixed32 XXX_sizecache=3;        //int32    `json:"-"`
}

message BlockMetadata{
    repeated bytes Metadata=1;             //[][]byte `protobuf:"bytes,1,rep,name=metadata,proto3" json:"metadata,omitempty"`
//	message XXX_NoUnkeyedLiteral{}; //struct{} `json:"-"`
	bytes XXX_unrecognized=2;     //[]byte   `json:"-"`
	sfixed32 XXX_sizecache=3;        //int32    `json:"-"`
}

message Block{
     BlockHeader Header=1;               //*BlockHeader   `protobuf:"bytes,1,opt,name=header,proto3" json:"header,omitempty"`
	 BlockData Data=2;                 //*BlockData     `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
	  BlockMetadata Metadata =3;             //*BlockMetadata `protobuf:"bytes,3,opt,name=metadata,proto3" json:"metadata,omitempty"`
//	  message XXX_NoUnkeyedLiteral=4;          //`json:"-"`
	  bytes XXX_unrecognized=5;             //`json:"-"`
	  sfixed32 XXX_sizecache=6;             //`json:"-"`
}

